# Raahi

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  requirements.txt  schema.sql  start.sh
backend/: .env.example  Makefile  config.py  main.py  pyproject.toml  railway.json  start.sh
backend/db/: supabase_client.py  travel_card_service.py
backend/models/: auth.py  travel_card.py
backend/routes/: auth.py  dependencies.py  travel_cards.py
backend/utils/: jwt_handler.py
client/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
client/src/context/: ThemeContext.tsx
client/src/services/: tripService.js  tripService.ts
client/src/types/: trip.ts
client/src/utils/: theme-script.ts
frontend/: Makefile  Procfile  railway.json  start.sh
frontend/src/: App.css  App.tsx
frontend/src/components/: AddTaskModal.css  AddTaskModal.tsx  Button.css  Button.tsx  Header.css  Header.tsx  Input.css  Input.tsx  PreviewModal.css  PreviewModal.tsx  Toast.css  Toast.tsx  TravelCard.css  TravelCard.tsx
frontend/src/pages/: Auth.css  Dashboard.css  Dashboard.tsx  Home.css  Home.tsx  Login.tsx  Register.tsx
frontend/src/styles/: theme.css
frontend/src/utils/: api.ts
server/: .env.example  .gitignore  README.md  package-lock.json  package.json
server/docs/: frontend-integration.md
server/src/: index.js
server/src/config/: passport.js  supabase.js
server/src/controllers/: auth.controller.js  trip.controller.js  user.controller.js
server/src/db/: functions.sql  init.js  init.sql  setup.js
server/src/middleware/: auth.js  auth.middleware.js
(+29 files in other folders)
